Add a lower paragraph and meta tags

--- a/mountains.html
+++ b/mountains.html
@@ -1,17 +1,21 @@
+<!doctype html>
 <html>
 	<head>
 		<title>Appalachian Mountains</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-wdith, initial-scale=1.0">
+		<link rel="stylesheet" href="css/mainPage.css">
 	</head>
 	<div class="mainContainer">
-		<p>"Main container"</p>
-	</div>
-	<div class="header">
-		<p>"Header"</p>
-	</div>
-	<div class="nav">
-		<p>"Navigation"</p>
-	</div>
-	<div class="mainContent">
-		<p>"main Content"</p>
+		<div class="header">
+			<p>"Header"</p>
+		</div>
+		<div class="nav">
+			<p>"Navigation"</p>
+		</div>
+		<div class="mainContent">
+			<p>"main Content"</p>
+		</div>
+		<p>"lower"</p>
 	</div>
 </html>
