Remove defaulted content

--- a/mountains.html
+++ b/mountains.html
@@ -12,26 +12,8 @@
 			<img class="insideImages" src="img/IMG_0082.jpg" alt="My beautiful wife" />
 		</div>
 		<div class="nav"></div>
-		<div class="mainContent">
-			<h1 class="dayTitle">Day 1 - FRIDAY</h1>
-			<p class="content">Bacon ipsum dolor amet porchetta drumstick hamburger, tri-tip strip steak biltong alcatra swine. Cupim t-bone turducken sirloin, picanha tongue pork belly meatball chuck frankfurter hamburger flank fatback leberkas meatloaf. Turkey corned beef picanha tongue porchetta tenderloin swine chicken fatback ground round. Rump short ribs tri-tip, tail shank drumstick chuck spare ribs frankfurter. Kielbasa short ribs short loin picanha, jowl pig ham hock ham pork corned beef shank. Pastrami brisket chicken, meatloaf swine andouille pork chop alcatra turkey cupim fatback bresaola. Flank turducken landjaeger brisket.
-			</p>
-			<div class= "contentImg">
-				<img class="insideImages" src="img/IMG_0071.jpg" alt="My beautiful wife" />
-			</div>
-			<p class="content">Kielbasa brisket pastrami pork loin leberkas hamburger beef ribs. Kevin swine spare ribs pig tri-tip, pork loin leberkas rump sirloin. Spare ribs pork chop kevin chicken pancetta prosciutto doner tongue meatball shank. Frankfurter brisket fatback, meatball pancetta pork chop shank venison. Pork loin rump andouille frankfurter kevin pig drumstick capicola chuck meatball boudin beef bresaola. Pork belly flank hamburger pig, pork loin jerky short ribs turducken tail tri-tip shankle leberkas corned beef venison.
-			</p>
-			<div class= "contentImg">
-				<img class="insideImages" src="img/IMG_0091.jpg" alt="My beautiful wife" />
-			</div>
-			<p class="content">Prosciutto pork chop hamburger, short loin sirloin pork loin bacon capicola corned beef shoulder turkey. Kevin filet mignon pastrami, pork belly fatback strip steak bresaola cupim turducken jowl sirloin. Strip steak capicola kevin tenderloin pancetta jowl. Pork kielbasa beef ribs meatloaf drumstick short loin, bresaola short ribs filet mignon biltong capicola.
-			</p>
-			<div class= "contentImg">
-				<img class="insideImages" src="img/IMG_0086.jpg" alt="My beautiful wife" />
-			</div>
-			<p class="content">Tri-tip ham hock tail, corned beef sausage alcatra ham brisket venison chicken drumstick shankle spare ribs. Porchetta t-bone ham meatloaf shank shoulder venison andouille. Chicken tri-tip pancetta landjaeger filet mignon meatloaf, doner andouille drumstick short ribs cow kielbasa ball tip ham hock. Pork loin salami short loin meatloaf boudin. Cupim prosciutto tail filet mignon pancetta, pastrami turkey kevin. Ground round chicken pork loin bresaola, tri-tip boudin leberkas. Landjaeger strip steak shankle kielbasa turducken short loin hamburger tenderloin shoulder prosciutto.
-			</p>
-		</div>
+		<div class="mainContent"></div>
 	</div>
 	<script src="js/nav.js"></script>
+	<script src="js/content.js"></script>
 </html>
